--- a/day9.10.11/index.html
+++ b/day9.10.11/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="sign-up">
             <div class="sign-up-title">
-                <p class="sign-up-title-main">Create Your Account</p>
+                <p class="sign-up-title-main">CREATE YOUR ACCOUNT</p>
                 <p class="sign-up-title-sub">It is absolutely free</p>
             </div>
             <div class="sign-box">
