--- a/day9.10.11/index.html
+++ b/day9.10.11/index.html
@@ -76,8 +76,8 @@
                 industry innovation Alliance for the <br>
                 intelligent and Connected Vehicles.</p>
             <div class="third-title-button">
-                <button class="left">Check out Features</button>
-                <button class="right">Try product for Free</button>
+                <button class="left">CHECK OUT FEATURES</button>
+                <button class="right">Try PRODUCT FOR FREE</button>
             </div>
         </div>
     </div>
