--- a/day9.10.11/index.html
+++ b/day9.10.11/index.html
@@ -78,7 +78,7 @@
                 intelligent and Connected Vehicles.</p>
             <div class="third-title-button">
                 <button class="left">CHECK OUT FEATURES</button>
-                <button class="right">Try PRODUCT FOR FREE</button>
+                <button class="right">TRY PRODUCT FOR FREE</button>
             </div>
         </div>
     </div>
