简化了一些逻辑

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <input type="checkbox" check-type="all">全选
     </div>
     <div id="table-wrapper"></div>
+    <script src="./JS/ife31data.js"></script>
     <script src="./JS/form.js"></script>
     <script src="./JS/app.js"></script>
 </body>
