打包了一下

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     </div>
     <div id="table-wrapper"></div>
     <script src="./JS/ife31data.js"></script>
-    <script src="./JS/form.js"></script>
-    <script src="./JS/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
