--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <input type="checkbox" check-type="all">全选
     </div>
     <div id="table-wrapper"></div>
-    <script src="./JS/ife31data.js"></script>
+    <script src="data.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
