--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="./CSS/form.css">
 </head>
 <body>
+    <div class="text">
+        <i>>>>></i>鼠标离开的时候 多维柱状图被移到了下方<br>
+        因为12个月的数据实在是太多了，一行显示看不清楚<br>
+        <i>>>>></i>有个bug就是有的数据距离最大值太远了<br>
+        最后就贴在坐标轴上了，不知道怎么解决<br>
+        <i>>>>></i>没有给柱状图加上华东华南什么的标识，柱子太小了<br>
+        加上这些标识太乱了，而且数据都是排好序的<br>
+        不加也能看懂
+    </div>
     <div id="region-radio-wrapper">
         <input type="checkbox" check-type="option">华东
         <input type="checkbox" check-type="option">华北
@@ -21,7 +30,20 @@
         <input type="checkbox" check-type="all">全选
     </div>
     <div id="table-wrapper"></div>
-    <script src="data.js"></script>
-    <script src="app.js"></script>
+    <div id="visual">
+        <div id="canvas">
+            <canvas id="my-canvas" width="600" height="600"></canvas>
+        </div>
+        <svg version="1.1"
+            baseProfile="full"
+            width="500" height="500"
+            xmlns="http://www.w3.org/2000/svg" id="my-svg">
+        </svg>
+    </div>
+    <script src="./JS/ife31data.js"></script>
+    <script src="./JS/draw.js"></script>
+    <script src="./JS/form.js"></script>
+    <script src="./JS/visualization.js"></script>
+    <script src="./JS/main.js"></script>
 </body>
 </html>
