修改了checkbox逻辑问题

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
         最后就贴在坐标轴上了，不知道怎么解决<br>
         <i>>>>></i>没有给柱状图加上华东华南什么的标识，柱子太小了<br>
         加上这些标识太乱了，而且数据都是排好序的<br>
-        不加也能看懂
+        不加也能看懂<br>
+        <i>>>>></i>svg图在谷歌浏览器上不能正常显示<br>
+        <i>>>>></i>火狐浏览器刷新时不能重置checkbox的选择....<br>
+        谷歌浏览器却可以
     </div>
     <div id="region-radio-wrapper">
         <input type="checkbox" check-type="option">华东
