--- a/index.html
+++ b/index.html
@@ -10,12 +10,8 @@
 <body>
     <div class="text">
         <i>>>>></i>鼠标离开的时候 多维柱状图被移到了下方<br>
-        因为12个月的数据实在是太多了，一行显示看不清楚<br>
-        <i>>>>></i>有个bug就是有的数据距离最大值太远了<br>
-        最后就贴在坐标轴上了，不知道怎么解决<br>
-        <i>>>>></i>没有给柱状图加上华东华南什么的标识，柱子太小了<br>
-        加上这些标识太乱了，而且数据都是排好序的<br>
-        不加也能看懂<br>
+        <i>>>>></i>有的数据距最大值太远，贴在坐标轴上<br>
+        <i>>>>></i>没有给柱状图加上标签，柱子太窄<br>
         <i>>>>></i>svg图在谷歌浏览器上不能正常显示<br>
         <i>>>>></i>火狐浏览器刷新时不能重置checkbox的选择....<br>
         谷歌浏览器却可以
