--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         <i>>>>></i>有的数据距最大值太远，贴在坐标轴上<br>
         <i>>>>></i>没有给柱状图加上标签，柱子太窄<br>
         <i>>>>></i>svg图在谷歌浏览器上不能正常显示<br>
-        <i>>>>></i>火狐浏览器刷新时不能重置checkbox的选择....<br>
-        谷歌浏览器却可以
+        <i>>>>></i>html页面留的信息太少导致代码太繁琐<br>
     </div>
     <div id="region-radio-wrapper">
         <input type="checkbox" check-type="option">华东
