--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <script src="./ES5.js"></script> -->
-    <script src="./ES6.js"></script>
+    <button>餐厅，启动！</button>
+    <script src="./IFErestaurant.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
