--- a/my/index.html
+++ b/my/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>justme</title><style>body {
-            overflow: hidden;
-            padding: 0;
-            margin: 0;
-            font-family: 'Roboto', sans-serif;
-            min-height: 100vh;
-            color: #57585c;
-            color: var(--color-text);
-            background-color: #fff;
-            background-color: var(--color-background);
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
-            }</style><link href=/static/css/app.d1120062e80cddc7887535a3e5878f75.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.2ae2e69a05c33dfc65f8.js></script><script type=text/javascript src=/static/js/vendor.e42044dcc591ea8c812d.js></script><script type=text/javascript src=/static/js/app.4a08111bc3f329dfb2f6.js></script></body></html>
+    overflow: hidden;
+    padding: 0;
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+    min-height: 100vh;
+    color: #57585c;
+    color: var(--color-text);
+    background-color: #fff;
+    background-color: var(--color-background);
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    }</style><link href='./static/css/app.d1120062e80cddc7887535a3e5878f75.css' rel=stylesheet></head><body><div id=app></div><script type=text/javascript src='./static/js/manifest.2ae2e69a05c33dfc65f8.js'></script><script type=text/javascript src='./static/js/vendor.e42044dcc591ea8c812d.js'></script><script type=text/javascript src='./static/js/app.4a08111bc3f329dfb2f6.js'></script></body></html>
