--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <meta property="og:title" content="UCIE">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="www.baidu.com/img/bd_logo1.png">
+    <meta property="og:image" content="./imgs/logo.png">
     <meta property="og:description" content="ucie">
 
     <title>Ucie</title>
