--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="./imgs/logo.png">
     <meta property="og:description" content="ucie">
-
-    <title>Ucie</title>
+    <title>xxx</title>
 </head>
 <body>
     
