--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     
-    <meta property="og:title" content="UCIE">
+    <meta property="og:url"   content="https://tsjianjiao.github.io" />
+    <meta property="og:title" content="UUUUUUU">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://tsjianjiao.github.io/imgs/logo.png">
     <meta property="og:description" content="ucie">
